# codex-api-service

./: .gitignore  README.md  README_en.md  config_example.yaml  pyproject.toml
codex_api_service/: __init__.py  admin.py  app.py  auth.py  codex_client.py  config.py  openai_compat.py  request_log.py  usage_log.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  dashboard.test.ts  dashboard.ts  main.tsx  styles.css  styles.test.ts  types.ts
scripts/: install_launchd_service.sh  install_systemd_user_service.sh  install_windows_task.ps1  run_service.ps1  run_service.sh  uninstall_launchd_service.sh  uninstall_systemd_user_service.sh  uninstall_windows_task.ps1
tests/: test_admin.py  test_app.py  test_cli.py  test_codex_client.py  test_config.py  test_openai_compat.py  test_service_scripts.py  test_usage_log.py
